# automp-frontend

./: .gitignore  DOC.md  README.md  TODO  WORKLOG
clang-tools/: CMakeLists.txt
clang-tools/omp-hijack/: CMakeLists.txt  omp-hijack.cpp
clang-tools/parallel-pal/: CMakeLists.txt  parallel-pal.cpp
clang-tools/pragma-note/: CMakeLists.txt  acceptors.h  annotation.h  annotations.def  codegen.h  insert-helper-data.h  pragma-note.cpp  pragma-note.h
examples/: break-continue.c  function-both.c  function-declaration.c  function-definition.c  hello-note.c  hello-openmp.c  infinite-loop.c  omp-critical.c  separated-spans.c  variable.c  while-and-do-while.c
examples/openmp/: Makefile  critical_sections.cpp  nesting.cpp
llvm/: Makefile
llvm/patch/tools/clang/include/clang/AST/: ASTContext.h
llvm/patch/tools/clang/include/clang/Basic/: TokenKinds.def
llvm/patch/tools/clang/lib/CodeGen/: CGDecl.cpp  CGStmt.cpp  CodeGenFunction.cpp  CodeGenModule.cpp
llvm/patch/tools/clang/lib/Parse/: ParseStmt.cpp  Parser.cpp
llvm/patch/tools/clang/tools/: CMakeLists.txt
llvm/scripts/: automp  clean.sh  compile.sh  createPatch.sh
